--- a/src/patternfly/base/patternfly-variables.scss
+++ b/src/patternfly/base/patternfly-variables.scss
@@ -1,16 +1,17 @@
 @use '../sass-utilities' as *;
-@use "./tokens/workspace-overrides" as *;
-@use "./tokens/tokens-font" as *;
-@use "./tokens/tokens-palette" as *;
+@use "./tokens/tokens-font" as font;
+@use "./tokens/tokens-palette" as palette;
 @use "./tokens/tokens-default" as default;
 @use "./tokens/tokens-dark" as dark;
 
 :where(:root) {
   @include pf-v6-set-inverse(false);
+  @include font.pf-v6-tokens;
+  @include palette.pf-v6-tokens;
   @include default.pf-v6-tokens;
 }
 
-:root:where(.pf-v6-theme-dark) {
+:where(.pf-v6-theme-dark) {
   @include dark.pf-v6-tokens;
 }
 
