fix(docs): add tabindex for scrollable examples

--- a/src/patternfly/components/Sidebar/examples/Sidebar.css
+++ b/src/patternfly/components/Sidebar/examples/Sidebar.css
@@ -1,4 +1,6 @@
-.ws-core-c-sidebar .ws-preview-html {
-  height: 200px;
+#ws-core-c-sidebar-sticky-panel,
+#ws-core-c-sidebar-static-panel,
+#ws-core-c-sidebar-responsive-panel-width {
   overflow: auto;
+  max-height: 200px;
 }
