chore(tokens): import tokens without :root selector in token files (#6598)
* chore(tokens): import tokens without :root selector in token files

* chore(tokens): fix missing token values

--- a/src/patternfly/base/patternfly-variables.scss
+++ b/src/patternfly/base/patternfly-variables.scss
@@ -1,12 +1,18 @@
 @use '../sass-utilities' as *;
-@use "./tokens/workspace-overrides" as *;
-@use "./tokens/tokens-font" as *;
-@use "./tokens/tokens-palette" as *;
-@use "./tokens/tokens-default" as *;
-@use "./tokens/tokens-dark" as *;
+@use "./tokens/tokens-font" as font;
+@use "./tokens/tokens-palette" as palette;
+@use "./tokens/tokens-default" as default;
+@use "./tokens/tokens-dark" as dark;
 
 :where(:root) {
   @include pf-v6-set-inverse(false);
+  @include font.pf-v6-tokens;
+  @include palette.pf-v6-tokens;
+  @include default.pf-v6-tokens;
+}
+
+:where(.pf-v6-theme-dark) {
+  @include dark.pf-v6-tokens;
 }
 
 @include pf-v6-rtl {
